<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="txtTipResult">Tip: 5$</string>
    <string name="chkRound">Round to nearest dollar</string>
    <string name="edtBillAmountLabel">Bill Amount</string>
    <string name="edtBillAmount">42.20</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtErrorMsg">Please enter a valid tip amount</string>

</resources>
